tests/cases/semantics/type_annotations/missing_struct_field_annotations.stderr
error: `struct` field does not have enough information
 --> $DIR/missing_struct_field_annotations.hash:3:5
2 |   Mux := struct(
3 |       val,
  |       ^^^ this `struct` field is missing both a type annotation and a default value
4 |   
  = help: consider giving this struct field a type annotation

error: `struct` field does not have enough information
  --> $DIR/missing_struct_field_annotations.hash:11:5
10 |   
11 |       beep,
   |       ^^^^ this `struct` field is missing both a type annotation and a default value
12 |   );
   = help: consider giving this struct field a type annotation

error: `function` parameter does not have enough information
  --> $DIR/missing_struct_field_annotations.hash:17:9
16 |   // a type can be inferred or a type annotation.
17 |   bar := (val, max, bax = 4, bux: i32, mux: i32 = 7) -> () => {
   |           ^^^ this `function` parameter is missing both a type annotation and a default value
18 |       ()
   = help: consider giving this function field a type annotation

error: `function` parameter does not have enough information
  --> $DIR/missing_struct_field_annotations.hash:17:14
16 |   // a type can be inferred or a type annotation.
17 |   bar := (val, max, bax = 4, bux: i32, mux: i32 = 7) -> () => {
   |                ^^^ this `function` parameter is missing both a type annotation and a default value
18 |       ()
   = help: consider giving this function field a type annotation
