tests/cases/semantics/type_annotations/missing_struct_field_annotations.hash
// run=fail, stage=semantic
Mux := struct(
    val,

    // Field must have either a default value from which a type
    // can be inferred or a type annotation.
    bax = 4,
    bux: i32,
    mux: i32 = 7,

    beep,
);


// Function fields must either have a default value from which 
// a type can be inferred or a type annotation.
bar := (val, max, bax = 4, bux: i32, mux: i32 = 7) -> () => {
    ()
};
